--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+server.port=8081
 
+app.max-keywords=5
+
+spring.datasource.url=jdbc:mysql://localhost/projetjee?zeroDateTimeBehavior=CONVERT_TO_NULL&serverTimezone=UTC
+spring.datasource.username=spring
+spring.datasource.password=spring
+spring.jpa.hibernate.ddl-auto=create
