--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,14 @@
             <scope>provided</scope>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/com.jayway.restassured/dist-spring-mock-mvc -->
+        <dependency>
+            <groupId>com.jayway.restassured</groupId>
+            <artifactId>dist-spring-mock-mvc</artifactId>
+            <version>2.2.0</version>
+            <type>pom</type>
+        </dependency>
+
     </dependencies>
 
     <build>
