--- a/pom.xml
+++ b/pom.xml
@@ -93,6 +93,11 @@
             <type>pom</type>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+         </dependency>
+
     </dependencies>
 
     <build>
