--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
-spring.profiles.active=@activatedProperties@
+server.port=8080
+
+app.max-keywords=5
+
+spring.datasource.url=jdbc:mysql://${DATABASE_URL}:3306/heretoclean?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=${DATABASE_PASSWORD}
+spring.jpa.hibernate.ddl-auto=update
